# Swiss

./: .dockerignore  .env  .firebaserc  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  firebase.json  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
app/: main.py
app/components/: elements.py
app/schemas/: strats.py
app/strats/: moving_window.py
app/utils/: fetch_stock.py
app/utils/external_data_helper/: fetch_stock.py
app/utils/firebase_helper/: database.py  stock_db.py
tests/: test_strats.py
tests/strats/: test_strats.py
tests/utils/: test_firebase.py  test_utils.py
