[tool.poetry]
name = "swiss"
version = "0.1.0"
description = ""
authors = ["IPINGCHOU <ipingchou84@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
numpy = "^2.2.0"
pandas = "^2.2.3"
streamlit = "^1.41.0"
poethepoet = "^0.24.0"

[tool.poe.tasks.activate]
cmd = "streamlit run app/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
